<resources>
    <string name="app_name">StarWars</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="star_wars">STAR WARS</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="wanted_name">wanted name</string>

    <string name="gender_robot">robot</string>
    <string name="nothing_result">The galaxy does not know this name…</string>
    <string name="manufacture">manufacture</string>
    <string name="model">model</string>
    <string name="_3">3</string>
    <string name="todo">TODO</string>
    <string name="diameter">diameter</string>
    <string name="population">population</string>
    <string name="beru_whitesun_lars">Beru Whitesun lars</string>
    <string name="gender_male">Gender : male</string>
    <string name="summ_starships_3">Summ starships : 3</string>
    <string name="films">Films :</string>
    <string name="model_imperial_i_class_star_destroyer">Model : Imperial I-class Star Destroyer</string>
    <string name="corellian_engineering_corporation">Corellian Engineering Corporation</string>
    <string name="passengers_n_a">Passengers : n/a</string>
    <string name="diameter_10465">Diameter : 10465</string>
    <string name="population_200000">Population : 200000</string>

    <string name="diameter_label">Diameter: %1$s</string>
    <string name="population_label">Population: %1$s</string>
    <string name="gender_label">Gender: %1$s</string>
    <string name="starships_label">Summ starships: %1$s</string>
    <string name="model_label">Model: %1$s</string>
    <string name="passengers_label">Passengers: %1$s</string>
    <string name="attack_of_the_clones">Attack of the Clones</string>
    <string name="director">Director :</string>
    <string name="richard_marquand">Richard Marquand</string>
    <string name="producer">Producer :</string>
    <string name="gary_kurtz_rick_mccallum">Gary Kurtz, Rick McCallum</string>
</resources>